Revert "temporary style rework"
This reverts commit 7997bac89ac36ed7d202349a0191b97fcd001429.

--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorCardBackground"
     android:orientation="horizontal">
 
     <TextView
@@ -12,6 +13,7 @@
         android:layout_margin="@dimen/item_offset"
         android:padding="@dimen/item_offset"
         android:text="09:00 - 11:30"
+        android:textColor="@color/colorAccentText"
         android:textStyle="bold" />
 
     <RelativeLayout
@@ -24,7 +26,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:background="#FFFFFF" />
+            android:background="@color/colorDividerNormal" />
 
         <ImageView
             android:id="@+id/timelineCircle"
@@ -45,8 +47,11 @@
             android:id="@+id/titleText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:padding="@dimen/item_offset"
             android:text="Mathematik"
+            android:textColor="@color/colorAccentText"
             android:textStyle="bold" />
 
         <TextView
@@ -55,6 +60,8 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/item_offset"
             android:text="RB4444"
+            android:textColor="@color/colorCardText"
             android:textStyle="bold" />
+
     </LinearLayout>
 </LinearLayout>
