--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,7 +1,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">>
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/colorCardText" />
     <size android:height="25dp"
         android:width="25dp"/>
 </shape>
