--- a/app/src/main/res/drawable/timeline_circle.xml
+++ b/app/src/main/res/drawable/timeline_circle.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/colorTimelineCircle" />
     <size android:height="25dp"
         android:width="25dp"/>
 </shape>
