--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -34,6 +34,7 @@ tools:context="de.gregoryseibert.vorlesungsplandhbw.view.activity.AboutActivity"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:clickable="false"
+        app:cardBackgroundColor="@color/colorCardBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,6 +62,7 @@ tools:context="de.gregoryseibert.vorlesungsplandhbw.view.activity.AboutActivity"
                 android:padding="@dimen/item_offset"
                 android:text="Entwickler: Gregory Seibert"
                 android:textAlignment="center"
+                android:textColor="@color/colorCardText"
                 android:textStyle="bold" />
 
             <TextView
@@ -69,6 +71,7 @@ tools:context="de.gregoryseibert.vorlesungsplandhbw.view.activity.AboutActivity"
                 android:padding="@dimen/item_offset"
                 android:text="Diese App wurde nicht für die Öffentlichkeit programmiert."
                 android:textAlignment="center"
+                android:textColor="@color/colorCardText"
                 android:textStyle="bold" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
