--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/md_grey_800</color>
-    <color name="colorPrimaryDark">@color/md_grey_900</color>
-    <color name="colorAccent">@color/md_lightblue_500</color>
+    <color name="colorPrimary">#3e3e3e</color>
+    <color name="colorPrimaryDark">#242424</color>
+    <color name="colorAccent">#9e9e9e</color>
 
-    <color name="colorTextPrimary">#D9FFFFFF</color>
-    <color name="colorTextSecondary">#D9000000</color>
+    <color name="colorPrimaryText">#FFFFFF</color>
+    <color name="colorAccentText">#FFFFFF</color>
 
-    <color name="md_grey_500">#9e9e9e</color>
-    <color name="md_grey_700">#616161</color>
-    <color name="md_grey_800">#424242</color>
-    <color name="md_grey_900">#212121</color>
+    <color name="colorBackground">#00306e</color>
 
-    <color name="md_indigo_500">#3f51b5</color>
-    <color name="md_indigo_700">#303f9f</color>
-    <color name="md_indigo_900">#1a237e</color>
+    <color name="colorCardBackground">#004299</color>
+    <color name="colorCardBackgroundIndent">@color/colorBackground</color>
+    <color name="colorCardText">@color/colorPrimaryText</color>
 
-    <color name="md_lightblue_500">#03a9f4</color>
+    <color name="colorDividerNormal">@color/colorAccent</color>
+    <color name="colorDividerExam">@color/colorAccent</color>
+    <color name="colorDividerFree">@color/colorAccent</color>
+
+    <color name="colorTimelineCircle">@color/colorDividerNormal</color>
 </resources>
