--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="android:textColorPrimary">@color/colorTextPrimary</item>
         <item name="android:textColorSecondary">@color/colorTextSecondary</item>
 
+        <item name="android:indeterminateTint">@color/colorPrimary</item>
+
         <item name="colorControlNormal">@color/colorTextAppBar</item>
 
         <item name="android:datePickerDialogTheme">@style/MyDatePickerDialogTheme</item>
