--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -35,5 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Datenbank leeren" />
+        android:text="Datenbank leeren"
+        android:visibility="invisible"/>
 </RelativeLayout>
