--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -7,10 +7,10 @@
         android:orderInCategory="100"
         app:showAsAction="always"
         android:title="Einstellungen"/>
-    <item
+    <!--<item
         android:id="@+id/action_about"
         android:icon="@drawable/info"
         android:orderInCategory="101"
         app:showAsAction="always"
-        android:title="Informationen"/>
+        android:title="Informationen"/>-->
 </menu>
